--- a/env_cheak.ipynb
+++ b/env_cheak.ipynb
@@ -25,7 +25,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(torch.__version__)\n",
     "print(torch.cuda.is_available())\n",
     "print(torch.version.cuda)"
@@ -41,7 +40,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##  dawiodjaoiwj"
+   ]
   }
  ],
  "metadata": {
