--- a/model/model_tokenizer_load.ipynb
+++ b/model/model_tokenizer_load.ipynb
@@ -269,6 +269,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=0\n",
+    "for name, param in model.named_parameters():\n",
+    "    n=n+1\n",
+    "    print(f\"Parameter {name} data type: {param.dtype}\")\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
