--- a/model/model_quant.ipynb
+++ b/model/model_quant.ipynb
@@ -205,6 +205,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](../static/微信图片_20240305102346.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -366,6 +373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](../static/微信图片_20240305102351.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -447,6 +461,20 @@
    "outputs": [],
    "source": [
     "quant_model.model.decoder.layers[0].self_attn.q_proj.__dict__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BNB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](../static/微信图片_20240305102356.png)"
    ]
   },
   {
