--- a/model/model_quant.ipynb
+++ b/model/model_quant.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[## 文档链接](https://huggingface.co/docs/transformers/main/en/main_classes/quantization#quantization)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## GPTQ"
    ]
   },
