--- a/model/model_quant.ipynb
+++ b/model/model_quant.ipynb
@@ -775,6 +775,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoModel, BitsAndBytesConfig\n\u001b[0;32m      3\u001b[0m _compute_dtype_map \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfp32\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39mfloat32,\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfp16\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mfloat16,\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbf16\u001b[39m\u001b[38;5;124m'\u001b[39m: torch\u001b[38;5;241m.\u001b[39mbfloat16\n\u001b[0;32m      7\u001b[0m }\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# QLoRA 量化配置\u001b[39;00m\n\u001b[0;32m     10\u001b[0m q_config \u001b[38;5;241m=\u001b[39m BitsAndBytesConfig(load_in_4bit\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     11\u001b[0m                               bnb_4bit_quant_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnf4\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     12\u001b[0m                               bnb_4bit_use_double_quant\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m     13\u001b[0m                               bnb_4bit_compute_dtype\u001b[38;5;241m=\u001b[39m_compute_dtype_map[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbf16\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModel, BitsAndBytesConfig\n",
+    "\n",
+    "_compute_dtype_map = {\n",
+    "    'fp32': torch.float32,\n",
+    "    'fp16': torch.float16,\n",
+    "    'bf16': torch.bfloat16\n",
+    "}\n",
+    "\n",
+    "# QLoRA 量化配置\n",
+    "q_config = BitsAndBytesConfig(load_in_4bit=True,\n",
+    "                              bnb_4bit_quant_type='nf4',\n",
+    "                              bnb_4bit_use_double_quant=True,\n",
+    "                              bnb_4bit_compute_dtype=_compute_dtype_map['bf16'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = AutoModel.from_pretrained(model_name_or_path,\n",
+    "                                  quantization_config=q_config,\n",
+    "                                  device_map='auto',\n",
+    "                                  trust_remote_code=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取当前模型占用的 GPU显存（差值为预留给 PyTorch 的显存）\n",
+    "memory_footprint_bytes = model.get_memory_footprint()\n",
+    "memory_footprint_mib = memory_footprint_bytes / (1024 ** 2)  # 转换为 MiB\n",
+    "\n",
+    "print(f\"{memory_footprint_mib:.2f}MiB\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
