--- a/model/model_tokenizer_load.ipynb
+++ b/model/model_tokenizer_load.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,150 +95,7 @@
        "      (embed_positions): OPTLearnedPositionalEmbedding(2050, 768)\n",
        "      (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
        "      (layers): ModuleList(\n",
-       "        (0): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (1): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (2): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (3): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (4): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (5): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (6): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (7): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (8): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (9): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (10): OPTDecoderLayer(\n",
-       "          (self_attn): OPTAttention(\n",
-       "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "            (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
-       "          )\n",
-       "          (activation_fn): ReLU()\n",
-       "          (self_attn_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "          (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
-       "          (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
-       "          (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
-       "        )\n",
-       "        (11): OPTDecoderLayer(\n",
+       "        (0-11): 12 x OPTDecoderLayer(\n",
        "          (self_attn): OPTAttention(\n",
        "            (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
        "            (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
@@ -258,7 +115,7 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -482,6 +339,27 @@
     "    n=n+1\n",
     "    print(f\"Parameter {name} data type: {param.dtype}\")\n",
     "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "477.75MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 获取当前模型占用的 GPU显存（差值为预留给 PyTorch 的显存）\n",
+    "memory_footprint_bytes = model.get_memory_footprint()\n",
+    "memory_footprint_mib = memory_footprint_bytes / (1024 ** 2)  # 转换为 MiB\n",
+    "\n",
+    "print(f\"{memory_footprint_mib:.2f}MiB\")"
    ]
   },
   {
