--- a/PEFT/transformers_peft.ipynb
+++ b/PEFT/transformers_peft.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -120,53 +120,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5 stars</td>\n",
-       "      <td>I have been eating at Dons since it opened in the 60's, so maybe I'm not the best to write a review or maybe I am?  Its the kind of place with a special taste that cannot be gotten anywhere else.  Its easy to slam the place if you think your an expert cause you been here since 87.  Well I have been her since 53 so I have a lot more history eating my favorite food.  I call Dons \\\" classic valley of the sun sonoran style mexican food! \\\" When I see the word AUTHENTIC, I want to run.  Have you ever eaten in Nogales, Mex.  Thats authentic and you can have it.  They only thing I'm not crazy about is their red or green chili burritos, not bad just not the best.  Their fries used to be the best I ever had, don't known since they reopened if they are the same.  I'm glad they reopened with new people, the prior owners had the personality of a fence post.  They used to nickle and dime you;  extra chips you paid for, ice tea refills cost; common this is Arizona.  I think they don't do this anymore.  Now if they would add chicken to the menu and how about a decent beer like Bohemia!  So I just have to say if you don't like the food you were weaned on the wrong style to start with.  Last thought, no indigestion.</td>\n",
+       "      <td>3 stars</td>\n",
+       "      <td>If you go to Cave Creek you must go to the Buffalo Chip, Harold's , hideaway etc.  just great local restaurants in a great town north of Phoenix/Scottsdale.   I like the Chip more for drinking dancing and rodeo than the food. But it is okay for a little grub   But it is fun.  So try it</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3 stars</td>\n",
-       "      <td>This show was a bit slow for me.  It made me snooze for a little bit.</td>\n",
+       "      <td>Chuy's was pretty good.  Seems like all of their locations are pretty similar.  I think they'd be best known for their cheap margaritas... $2 pints, $4 small pitchers.  They aren't too strong and come from a mediocre mix, but if you're looking for something sweet and cheap its a good bet.\\n\\nFree serve-yourself chips and salsa are pretty good.  \\n\\nAs for food... pretty decent prices and okay to good food.  I wouldn't say its authentic Mexican, actually I think the menu is a bit confused.  But the food is good overall.  It's a place we'll go to every month or so.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4 stars</td>\n",
-       "      <td>It's good but Ramsey's across the street is dank.</td>\n",
+       "      <td>3 stars</td>\n",
+       "      <td>I ended up eating at Taggia while staying at Firesky so it was a choice of convenience. I've had the food from here several times using room service and it's never anything to complain about. It was the same story the day I had lunch here. I had an organic greens salad and shared the margherita and goat cheese pizzas with my fellow lunchers. All of the food was good - the goat cheese pizza in particular with its thin, crispy crust.\\n\\nUnfortunately the day we ate here our service was MIA. We were told we could seat ourselves so we did. After about 10 minutes someone came by to take our drink order and maybe 10 minutes later our waters arrived. Well 2 out of 3 of them did anyway. Then we ordered two salads and two pizzas to share. One pizza came first. WTH? Where were the salads? Or the other pizza? The salads showed up a few minutes later and then our server realized that she had forgotten our second pizza. No biggie since we had salads and one pizza to eat. But the service was lackluster with a L. Like Andrea R says, I wouldn't go out of my way to eat here, but when in the area it's a good option to have.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1 star</td>\n",
-       "      <td>The standard chain burrito joint, that lacks flavor and is way overpriced. The burritos are very wet, meaning by the time you eat half of it, the other half will fall apart so ask for a fork.</td>\n",
+       "      <td>2 star</td>\n",
+       "      <td>I recently had a work luncheon at Ricardo's, I had been before years ago and it was extremely unmemorable. This visit would be more memorable but for the wrong reasons. \\n\\nWhen given the choice, I prefer to order off the menu than choose a buffet. But the whole group went to the buffet and I didn't want to be the oddball. I had two carne asada tacos, cheese enchilada and chips &amp; salsa. The enchilada was bland the only hint of flavor was the acidity from the tomatoes. The salsa, too, was bland and watery. The chips were pretty generic. The first taco was ok, a bit bland, but tender. The second was filled with grizzly meat. It really turned my stomach. Fortunately, the service was friendly and they were able to accomodate our large group.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3 stars</td>\n",
-       "      <td>The decor is reflective of The Malaysian tropics, island style. Wood accents throughout entire restaurant along with a foosball and pool table in the back. It's a warm casual ambience, laid back. All the employees are friendly and appear joyful which elevates the mood of the diners as well. The dishes lacked flavor and were average. The \\\"Roti Canai\\\" and curry items on the menu I believe were the standout stars! I didn't get the chance to try their whole fish or seafood items so I guess I have to come back! The stir fried noodles I ordered lacked flavor, I had to add more soy sauce. Overall, the menu has abundance of seafood items in which I hope I get to try later on.</td>\n",
+       "      <td>4 stars</td>\n",
+       "      <td>We had a great time at this resort over the long weekend.  The staff was super friendly, especially Adam, David and Cassie.  Great job!!!  And our suite was perfect to accommodate three women with lots of bags, make-up and shoes.  The Hole in the Wall restaurant had a really good breakfast, friendly staff and an outdoors patio.  Not so for the Rico Restaurant.  They were a bit rude, overwhelmed and obviously didn't want our business.  We also floated down the Lazy River, it was definitely Lazy...pretty slow but perfect temp.  All in all, I'll be back.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3 stars</td>\n",
-       "      <td>I've been to this place a number of times, and I usually enjoy it  They are very nice but sometimes service can be a bit slow.  My biggest complaint is that often the air conditioning either isnt on or it's turned way down which prevents me from visiting when it's warm (c'mon, its Vegas!)</td>\n",
+       "      <td>1 star</td>\n",
+       "      <td>Im an owner with no kids, this place is not for my husband and I.. The element here is all about families and cooking in and playing in the pool from the moment it opens.\\n\\nThe restaurant bar is a bit of a joke, and the pressure to buy more points makes a relaxing vacation more stressful. We were an original owner and saw most of it built.\\n\\nWe noticed that they no longer offer a shuttle which is a mistake for those that want to go to the strip and not have to worry about driving. But after this weekend I see that they don't need to offer the shuttle because more than half the people there don't plan on leaving the facility at all.\\n\\nThe guests that we ran into all seemed to be there on a free vacation offer. They were tatted up and pushing baby strollers... and screaming to each other WAIT TIL YOU SEE THE POOL....\\n\\nMy hubby and myself both looked at each other and said OUT LOUD, we don't think we will be coming back here again ever to this location.\\n\\nWe came home and looked into selling  it all together, but then thought maybe we would try another location that Diamond Resorts has to offer before we do so..\\n\\nSo bottom line, if you have kids and love the pool and slides and pool some more.. this is for you.. If your looking for a weekend with the hubby or friends in Vegas to relax and to enjoy what Vegas is all about... this resort is not for you..</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>3 stars</td>\n",
-       "      <td>Only in Vegas. Kinda like a Denny's with a fire pit and roller skates. It's kitch, and it's fab. It's hard not to love this place. From what I remember at least. You won't leave hungry if you order food. And if you don't- you won't be dissapointed with the eye candy or the drinks. It's 24 hrs after all and Vegas is a 24 hr city...so at some point you should end up here. Good spot for pictures...</td>\n",
+       "      <td>Booked a room here through Priceline for the Tuesday before Thanksgiving.  Actually booked it on the drive in from Las Vegas through my cell phone, which was pretty sweet.  Paid $25 + tax, so you can't beat the price.  We had a hard time finding it as Google Maps was wrong about it's location, but you can't blame the hotel for that.\\n\\nWhat I can blame the hotel for is not giving me a king size bed.  Priceline had booked me with 2 doubles, and in my experience I am always able to switch unless they're sold out.  The front desk clerk told me they were indeed not sold out, but it was their policy not to let Priceline users switch rooms.  So much for considering staying there the rest of Thanksgiving week.\\n\\nI was going to let it go, but then at 9:30am the maid knocked on our door and woke me up 2 hours earlier than I had planned (we got to sleep at 5am, give me a break).  I ended up coming out of my room and saw that my do not disturb sign was on, so she must have chosen to ruin my day for fun.  Tried to fall back asleep but was then kept up by the sounds of what looked to be a loud garbage truck parked right outside of our room.\\n\\nI give up on sleeping.  At least they have solid free Internet so I can Yelp this hotel.  Courtyard, you're lucky you're getting 3 stars from me.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2 star</td>\n",
-       "      <td>In order to finish my rounds of the Pittsburgh coffee shops, I've begun going to those that are a little out of the way of my normal driving routes. I went here today in order to check it out, mostly because I'd heard from some coworkers that it's a pretty cool place - I should have connected the fact that all the coworkers who mentioned it were a little punk/hipster and arrived with less expectations. Either way, the coffee wasn't amazing - served from a push-pot - high acidity and hardly any forward notes. My macchiato was more of a dry cappuccino, which is kind of my pet peeve at coffee shops. Making a macchiato properly is a requirement for me, meaning a double shot (preferably pulled short) stained with milk foam; all of this should fit into a demitasse. There are other variations, I just judge you if you use them. We also had a pastry, it was old, soggy, and sad.  I personally don't think it's a great idea to wrap baked goods up in plastic for over a day - because they generally get soggy in coolers. So, not the best, on the plus side though, everybody has really nice tattoos and the actual shop is comfy with a great view of the Polish Hill area. And they sell Red Star Kombucha, which is locally brewed and awesome. If I lived on Polish Hill, I'd get used to the coffee and set up shop here, but it's nowhere near worth driving to.</td>\n",
+       "      <td>Been to 4 Cirques and this is the least favorite.  Sets and costumes are absolutely amazing but the acts were very unimpressive compared to the older ones we've seen.  \\nThe only exception was the opening act with the two twin men on ropes that swung out into the audience.  They weren't in the book at the shop so I think they added them in later to spice up the program. Breathtaking!\\n\\nPros- Art direction, sets, lights\\n\\nCons- Acts seen before and ANNOYING clowns</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>4 stars</td>\n",
-       "      <td>I really didn't expect to find good Korean food out in Vegas. I mean, yeah, there are Koreans everywhere, but I'm from LA... Koreatown... etc.\\n\\nBut I was thoroughly impressed with Island Style.\\n\\nWe didn't end up ordering a lot of the Hawaiian style food, but next time I do want to try the meat jun or the loco moco.\\n\\nMy boyfriend and I ordered naengmyuns and his sister ordered a dolsot (stone pot) bibimbap. It was a hot day! The naengmyun was delicious and so refreshing!!! I really enjoyed it. The bibimbap wasn't bad either. She didn't add in the gochujang (sweet spicy Korean chili sauce) at first because she was intimidated by the deep red spicy-looking color, but once she did, she loved it.\\n\\nWe also ordered a short rib side to share. It wasn't the Korean style galbi I craved with my naengmyun (gal-naeng, anybody?!?), but it was still good.\\n\\nThe banchans were all good as well. And of course, the boiled peanuts were awesome. Flavored just right.\\n\\nIt's definitely a place for the locals. I kind of felt out of place, being from out of town.\\n\\nThe service was on and off. Some of the servers were attentive and good. But the server that took our order completely forgot the sweet and sour pork (tangsooyook) my boyfriend wanted. We ended up cancelling that order because it just never came out. Also, I felt that the Korean workers were nicer to the Koreans. Even though I am Korean, I spoke English to the non-Koreans I was with and I felt that it cost me some quality service. But what can you expect... that's how most Korean restaurants are anyways.</td>\n",
+       "      <td>2 star</td>\n",
+       "      <td>KOOLAID KID reminded me of home...nice touch..i know I know..this is suppose to be about the chicken &amp; waffles, but I must say quenching my thirst is very important to me..so back to the food..it was just that chicken(no flavor) &amp; waffles(nothing special)..mac &amp; cheese was very nice...and the new building was very very nice..okay that's all</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>4 stars</td>\n",
-       "      <td>I'm a fan of the big burrito, but I'm also a fan of a freshly cooked tortilla and having the innards mixed up too.  This place has the trifecta.\\n\\nSome outdoor seating along with a beautiful Phoenix afternoon made this a good break from work.</td>\n",
+       "      <td>1 star</td>\n",
+       "      <td>Just called this location and I live 1.8 miles away. I asked them to deliver and they informed me that they would not deliver to my house because it was a couple hundred yards out of the map plan. They asked me to call the power and southern store. This store advised me that they could not deliver because jimmy johns has a two mile radius they can deliver to.  Called this store back and they once again decided to tell me even though I was in the two mile radius they did not want to deliver to me and my only option was for pickup. I will never eat at this location. I know the owners at Firehouse Subs and they go out of the way and this location is just lazy. Not getting my money jimmy johns no matter how fast you are. Laziness is worse</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -192,9 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m在当前单元格或上一个单元格中执行代码时 Kernel 崩溃。\n",
+      "\u001b[1;31m请查看单元格中的代码，以确定故障的可能原因。\n",
+      "\u001b[1;31m单击<a href='https://aka.ms/vscodeJupyterKernelCrash'>此处</a>了解详细信息。\n",
+      "\u001b[1;31m有关更多详细信息，请查看 Jupyter <a href='command:jupyter.viewOutput'>log</a>。"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer\n",
     "tokenizer=AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
@@ -207,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,8 +542,8 @@
     "\n",
     "training_arg = TrainingArguments(output_dir=model_dir,\n",
     "                                  evaluation_strategy=\"epoch\", \n",
-    "                                  per_device_train_batch_size=3,\n",
-    "                                  num_train_epochs=1,\n",
+    "                                  per_device_train_batch_size=2,\n",
+    "                                  num_train_epochs=2,\n",
     "                                  logging_steps=30)"
    ]
   },
@@ -544,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
