--- a/env_cheak.ipynb
+++ b/env_cheak.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import torch"
@@ -34,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 检查torch"
+    "## 检查torch\n"
    ]
   },
   {
@@ -43,6 +45,23 @@
    "source": [
     "##  dawiodjaoiwj"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
