--- a/RAG/gradio/gradio_example.ipynb
+++ b/RAG/gradio/gradio_example.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7867\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -37,54 +37,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import gradio as gr\n",
-    "\n",
-    "def echo(message, history):\n",
-    "    if len(history) > 0:\n",
-    "        return message  + str(history[-1])\n",
-    "    return message\n",
-    "\n",
-    "demo = gr.ChatInterface(fn=echo, examples=[\"hello\", \"hola\", \"merhaba\"], title=\"Echo Bot\")\n",
-    "demo.launch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7870\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7870/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 38,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +64,7 @@
       "    return await future\n",
       "  File \"c:\\Users\\86195\\.conda\\envs\\transformers\\lib\\site-packages\\anyio\\_backends\\_asyncio.py\", line 807, in run\n",
       "    result = context.run(func, *args)\n",
-      "  File \"C:\\Users\\86195\\AppData\\Local\\Temp\\ipykernel_4476\\3193623380.py\", line 9, in echo\n",
+      "  File \"C:\\Users\\86195\\AppData\\Local\\Temp\\ipykernel_5688\\2511526643.py\", line 9, in echo\n",
       "    outputs=model.generate(**inputs,max_length=20)\n",
       "TypeError: transformers.generation.utils.GenerationMixin.generate() argument after ** must be a mapping, not Tensor\n"
      ]
@@ -125,13 +78,49 @@
     "tokenizer=AutoTokenizer.from_pretrained(model_id,trust_remote_code=True)\n",
     "\n",
     "def echo(message, history):\n",
-    "    inputs=tokenizer.encode(message,return_tensors=\"pt\")\n",
-    "    outputs=model.generate(**inputs,max_length=20)\n",
-    "    return tokenizer.decode(outputs[0],skip_special_tokens=True)\n",
+    "    \n",
     "\n",
     "\n",
     "demo = gr.ChatInterface(fn=echo, examples=[\"hello\", \"hola\", \"merhaba\"], title=\"Echo Bot\")\n",
-    "demo.launch()\n"
+    "demo.launch()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[    2, 42891]])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "transformers.generation.utils.GenerationMixin.generate() argument after ** must be a mapping, not Tensor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m inputs\u001b[38;5;241m=\u001b[39mtokenizer\u001b[38;5;241m.\u001b[39mencode(message,return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(inputs)\n\u001b[1;32m----> 9\u001b[0m outputs\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mgenerate(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39minputs,max_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(tokenizer\u001b[38;5;241m.\u001b[39mdecode(outputs[\u001b[38;5;241m0\u001b[39m],skip_special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: transformers.generation.utils.GenerationMixin.generate() argument after ** must be a mapping, not Tensor"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "import gradio as gr\n",
+    "model_id = \"E:\\model\\language\\opt-125m\"\n",
+    "message=\"hello\"\n",
+    "model=AutoModelForCausalLM.from_pretrained(model_id,trust_remote_code=True).cuda()\n",
+    "tokenizer=AutoTokenizer.from_pretrained(model_id,trust_remote_code=True)\n",
+    "inputs=tokenizer.encode(message,return_tensors=\"pt\")\n",
+    "print(inputs)\n",
+    "outputs=model.generate(**inputs,max_length=20)\n",
+    "print(tokenizer.decode(outputs[0],skip_special_tokens=True))"
    ]
   },
   {
